[tool.poetry]
name = "bank-app"
version = "0.1.0"
description = ""
authors = ["Oleksandr6676 <36409046+Oleksandr6676@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
black = "^24.8.0"
ruff = "^0.6.1"
requests = "^2.32.3"
behave = "^1.2.6"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
